# adviser_allocation

./: .dockerignore  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ALTERNATIVE_SETUP.md  ARCHITECTURE.md  BUTTON_TESTING_REPORT.md  CICD_COMPLETION_SUMMARY.md  CICD_SETUP.md  CI_CD_SUMMARY.md  CI_CD_SUMMARY.txt  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  GITHUB_TRIGGER_SETUP.md  MIGRATION_COMPLETE.md  Makefile  OPTIMIZATION_SUMMARY.md  PHASE1_TEST_IMPLEMENTATION.md  PHASE2_INTEGRATION_TESTS.md  PHASE3_SECURITY_TESTS.md  PHASE4_E2E_AND_PERFORMANCE.md  PHASE5_CICD_INTEGRATION.md  QA_TESTING_PLAN.md  README.md  REFACTORING_NOTES.md  allocate.py  app.yaml.example  cloudbuild.yaml  main.py  pyproject.toml  requirements-test.txt  requirements.txt  test_allocate.py  test_chat_alerts.py  test_integration.py  test_local_full.py  (+4 more)
.claude/commands/: SKILL.md
.claude/rules/: database.md  deployment.md  laws.md  protected-files.md  quality.md  security.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pre-commit.yml
api/: allocation_routes.py  box_routes.py
core/: allocation.py
docs/: API_REFERENCE.md  BOX_FOLDER_WORKFLOW.md  CHANGELOG.md  CHAT_ALERTS_FIX.md  CONFIGURATION.md  CONTRIBUTING.md  INFRASTRUCTURE.md  INTEGRATIONS.md  OPERATIONS.md  README.md  SKILLS_FRAMEWORK.md  TEST_SUMMARY.md  USER_GUIDE.md  adviser_allocation_explanation.md  box-folder-workflow.html  user-guide.md
middleware/: rate_limiter.py
scripts/: box_folder_creation.py  capture_box_metadata_screens.js  check_generic_names.py  check_todo_format.py  cleanup_box_duplicates.py  create_test_data.py  list_box_folders.py  migrate_calendar_watches.py  migrate_firestore_to_cloudsql.py  setup_calendar.py  sync_firestore_closures.py
scripts/migrations/: add_google_event_id_to_closures.sql  create_aa_admin_users.sql  create_calendar_watch_channels.sql
services/: allocation_service.py  box_folder_service.py
skills/: __init__.py
skills/definitions/: e2e_tests.py  unit_tests.py
src/adviser_allocation/: __init__.py  app.py  main.py
src/adviser_allocation/api/: __init__.py  allocation_routes.py  box_routes.py  skills_routes.py  webhooks.py
src/adviser_allocation/core/: allocation.py  capacity_calculator.py
src/adviser_allocation/db/: __init__.py  connection.py  models.py  repository.py
src/adviser_allocation/jobs/: __init__.py  compute_simulated_clarifies.py
src/adviser_allocation/middleware/: __init__.py  rate_limiter.py
src/adviser_allocation/services/: allocation_service.py  box_folder_service.py  calendar_sync_service.py  calendar_watch_service.py  cloudsql.py  oauth_service.py
src/adviser_allocation/skills/: __init__.py  decorator.py  executor.py  registry.py  skill.py
src/adviser_allocation/skills/definitions/: __init__.py  e2e_tests.py  integration_tests.py  unit_tests.py
src/adviser_allocation/tools/: box_collaborators.py  box_metadata_template.py
src/adviser_allocation/utils/: auth.py  cache_utils.py  common.py  firestore_helpers.py  http_client.py  secrets.py
static/css/: app.css
static/js/: box_settings.js  capacity_overrides.js  closures.js  toast.js
templates/: allocation_history_ui.html  availability_clarify_chart.html  availability_earliest.html  availability_matrix.html  availability_meetings.html  availability_schedule.html  box_collaborators.html  box_folder_create.html  box_metadata_manual.html  box_metadata_status.html  box_metadata_tagging.html  box_settings_ui.html  capacity_overrides.html  closures_ui.html  employees_ui.html  error.html  homepage.html  layout.html  leave_requests_ui.html  login.html  workflows.html  workflows_adviser_allocation.html  workflows_box_details.html
tests/: test_allocation_logic.py  test_api_integration.py  test_app_e2e.py  test_authentication_security.py  test_button_endpoints.py  test_cache_utils.py  test_calendar_sync_service.py  test_calendar_watch_service.py  test_calendar_webhook.py  test_common_utils.py  test_data_protection_security.py  test_database_integration.py  test_e2e_workflows.py  test_endpoint_auth.py  test_external_services_integration.py  test_firestore_helpers.py  test_http_client.py  test_oauth_service.py  test_performance.py  test_playwright_qa.py  test_prod_smoke.py  test_secrets_management.py  test_security_owasp.py  test_skills.py  test_webhook_allocation.py  test_webhook_e2e_mock.py
tools/: __init__.py  box_collaborators.py
utils/: __init__.py  common.py  firestore_helpers.py  secrets.py
