[project]
name = "adviser-allocation"
version = "1.0.0"
description = "Automated adviser allocation system for Pivot Wealth"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}

# Dependencies managed in requirements.txt for App Engine
dependencies = [
    "Authlib>=1.3.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests for utilities and core functions",
    "integration: Integration tests for APIs, database, external services",
    "security: Security tests covering OWASP Top 10",
    "e2e: End-to-end workflow tests",
    "performance: Performance and load testing",
    "slow: Tests that take longer than 5 seconds",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["src/adviser_allocation"]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 35
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
