[project]
name = "adviser-allocation"
version = "1.0.0"
description = "Automated adviser allocation system for Pivot Wealth"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}

# Dependencies managed in requirements.txt for App Engine
dependencies = [
    "Authlib>=1.3.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests for utilities and core functions",
    "integration: Integration tests for APIs, database, external services",
    "security: Security tests covering OWASP Top 10",
    "e2e: End-to-end workflow tests",
    "performance: Performance and load testing",
    "slow: Tests that take longer than 5 seconds",
]
filterwarnings = ["ignore::DeprecationWarning"]

# Ruff - replaces black + flake8 + isort
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (includes E722 bare-except)
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print (Law: no print() in src)
    "PLE",    # Pylint errors
    "PLW",    # Pylint warnings
    "PLR",    # Pylint refactor (function length, max params)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E402",    # module level import not at top
    "F401",    # unused import (in __init__.py)
    "F811",    # redefinition of unused name
    "F841",    # local variable assigned but never used
    "B904",    # raise from (existing code pattern)
    "PLW0602", # global without assignment
    "PLW0603", # global statement
    "PLW2901", # loop variable overwritten
    "B007",    # unused loop variable
    "C416",    # unnecessary list comprehension
    "PLR0911", # too-many-return-statements (existing code)
    "PLR0912", # too-many-branches (existing code)
    "PLR2004", # magic-value-comparison (existing code)
    "PLR0914", # too-many-locals (existing code)
    "PLR1702", # too-many-nested-blocks (existing code)
    "PLR0917", # too-many-positional-arguments (existing code)
]

# Coding law limits (warn, don't block existing code)
[tool.ruff.lint.pylint]
max-args = 5           # Law: max 4-5 parameters
max-statements = 50    # Law: max ~50 lines per function

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["T201"]
"scripts/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Keep for backwards compatibility
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["src/adviser_allocation"]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 35
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
